week3/assets/css/style.css
/* Week 3 - Website with all components
---------------------------------------------------- */
body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  counter-reset: section;
}

ul, ol {
  padding: 0;
  list-style: none;
}

section {
  display: block;
}

h1, h2, h3, h4, h5 {
  display: block;
  font-family: 'Open Sans';
  font-weight: 700;
  letter-spacing: .125em;
  text-transform: uppercase;
}

a {
  padding: .25em;
  border: .25em solid transparent;
  outline: none;
}

a:focus {
  border-color: #f1c40f;
}

/* Generic Form Styles
---------------------------------------------------- */
[role="button"] {
  height: 2.5em;
  width: 100%;
  margin: 1em 0 0 auto;
  border: .25em solid transparent;
  background-color: #4886ff;
  color: white;
  font-size: 1.15em;
}

[role="button"]:hover {
  background-color: #3F77E4;
}

[role="button"]:focus {
  border: .2em #f1c40f solid;
  outline: none;
}

input {
  border: .25em transparent solid;
  font-family: inherit;
}

input:invalid {
  border-color: #fe8559;
}

input:valid {
  border-color: #2ecc71;
}

input:focus {
  border: .25em #f1c40f solid;
  outline: none;
}

.chat textarea:focus {
  border: .3em #f1c40f solid;
  outline: none;
}

/* Checkbox
---------------------------------------------------- */
input[type="checkbox"] {
  position: absolute;
  clip: rect(0,0,0,0);
}

input[type="radio"] {
  opacity: 0;
  position: absolute;
}

input[type="checkbox"] + label::before {
  content: '\a0';
  display: inline-block;
  width: 1.2em;
  margin-right: .75em;
  border: .2em solid transparent;
  border-radius: .2em;
  background-color: #fff;
  text-indent: .15em;
  line-height: 1.25;
  cursor: pointer;
}

input[type="radio"] + label::before {
  transition: .25s;
  content: '\a0';
  display: inline-block;
  width: 4em;
  height: 4em;
}

input[type="radio"]:hover + label::before {
  transition: .25s;
  width: 4.75em;
  height: 4.75em;
  border-radius: 100%;
}

input[type="radio"]:checked + label::before {
  transition: .4s;
  width: 5.25em;
  height: 5.25em;
  border: .2em solid #fff;
  border-radius: 100%;
}

input[type="checkbox"]:checked + label::before {
  content: '\2713';
  background-color: #2ecc71;
  color: white;
}

input[type="checkbox"]:focus + label::before,
input[type="radio"]:focus + label::before {
  border: .2em #f1c40f solid;
}

input[type="radio"]:focus + label::before {
  border-radius: 50%;
}



/* Navigation
---------------------------------------------------- */
header nav {
  text-align: center;
}

header h1 {
  padding: 1.5em 0;
  margin: 0;
  background-color: #1d2225;
  color: #fff;
}

header ul {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-top: 0;
}

header li > ul {
  flex-direction: column;
  z-index: 10;
}

header li {
  flex: 1 1 0;
}

header a {
  display: block;
  padding: .7em;
  background-color: #3E414A;
  color: #fff;
  text-decoration: none;
  text-align: center;
}

header li > a:hover {
  background-color: #CF4857;
}

.dropdown:hover > ul {
  display: flex;
  flex-direction: column;
}

header a:focus {
  border: .25em solid #f1c40f;
}

header a:focus + ul {
  display: flex;
}

header li ul {
  display: none;
  position: static;
  padding: 0;
  list-style: none;
}

header li ul a {
  background-color: #4D4F5B;
}

[aria-label="current"] {
  background-color: #d73446;
}

@media screen and (min-width: 38.75em) {
  header ul {
    flex-direction: row;
  }
  header li ul {
    position: absolute;
    min-width: 15em;
  }
}

@media screen and (max-width: 62.5em) {
  header li ul {
    min-width: 12em;
  }
}

/* Login
---------------------------------------------------- */
.login {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1000;
}

.login fieldset {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  width: 40%;
  padding: 2em;
  margin: 8em auto 5em auto;
  border: none;
  transition: .5s;
  background-color: #f3f3f5;
}

.login fieldset:valid {
  background-color: rgb(71, 255, 220);
}

.login fieldset:invalid > [role="button"] {
  background-color: #b7b7b7;
  cursor: not-allowed;
}

.login fieldset:valid > [role="button"] {
  transition: .5s;
  background-color: #2ecc71;
  cursor: pointer;
}

.login a {
  position: absolute;
  flex-basis: 26%;
  top: 14.5em;
  right: 2em;
  color: #2980b9;
  text-align: right;
  font-weight: 800;
  text-decoration: none;
}

.login label {
  flex-basis: 100%;
  margin-bottom: .5em;
  color: #1d2225;
  font-weight: 500;
}

.login input {
  width: 92.5%;
  height: 2.5em;
  padding: 0.25em .75em;
  margin-bottom: 1em;
  font-size: inherit;
}

.login [for="field-stay-logged-in"] {
  flex-basis: 35%;
}

.login [type="checkbox"] {
  flex-basis: auto;
}

#login:target {
  display: block;
}

@media screen and (max-width: 63.75em) {
  .login fieldset {
    width: 60%;
  }
}

@media screen and (max-width: 38.75em) {
  .login fieldset {
    width: 80%;
  }
}

/* Media item
---------------------------------------------------- */
.media-item {
  position: relative;
  max-width: 25em;
  margin: 0 auto;
  background-color: #ecf0f1;
}

.media-item h1 {
  margin: 0;
  padding: 1em;
  background-color: #34495e;
}

.media-item h1:before {
  content: "";
  margin-left: -0.5em;
}

.media-item a {
  color: white;
  text-decoration: none;
}

.media-item a:focus {
  display: inline-block;
}

.media-item a:after {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: "";
}

.media-item p {
  padding: 1em;
  padding-top: 0;
}

/* Step indicator
---------------------------------------------------- */
.step-indicator nav {
  display: flex;
  flex-direction: column;
  transition: .3s;
  width: 85%;
  margin: 5em auto;
  padding: 2em;
  background-color: #34495e;
}

.step-indicator h1 {
  color: white;
}

.step-indicator ol {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-bottom: 0;
}

.step-indicator li {
  padding: .75em 1.25em;
  margin-top: .5em;
  color: white;
  text-align: center;
}

.step-indicator li:before {
  color: inherit;
  counter-increment: section;
  content: counter(section) ". ";
}

.step-indicator a {
  color: white;
}

.step-indicator a:focus {
  padding: .55em 1.05em;
  border: .2em #f1c40f solid;
  color: white;
}

.step-indicator [aria-label="current step"] {
  color: yellow;
}

.step-indicator progress {
  width: 100%;
  height: 2em;
  border: 0;
  background-color: #fff;
}

.step-indicator progress::-webkit-progress-bar {
  background-color: #ecf0f1;
}
.step-indicator progress::-webkit-progress-value {
  background-color: #e74c3c;
}

@media screen and (min-width: 53.125em) {
  .step-indicator nav {
    transition: .3s;
    width: 50%;
  }
}

/* Chat
---------------------------------------------------- */
.chat {
  transition: .5s;
  position: fixed;
  bottom: -27.5em;
  right: 0;
  min-width: 19em;
  margin: 0 auto;
  background-color: #f3f3f5;
}

.chat > a {
  display: block;
  padding: .5em;
  background-color: #f1c40f;
  color: white;
  text-decoration: none;
  font-size: 1.2em;
  text-align: center;
}

#chat:target {
  transition: .5s;
  bottom: 0em;
}

#chat:target > a {
  display: none;
}

#chat > a.close {
  display: none;
}

#chat:target > a.close {
  display: block;
  padding: .5em;
  color: white;
  text-decoration: none;
  font-size: 1.2em;
  text-align: center;
}

.chat ol {
  padding: .75em;
  width: 18em;
  height: 12.5em;
  overflow: scroll;
}

.chat form {
  display: flex;
  flex-direction: column;
  padding: .75em;
  background-color: #34495e;
}

.chat li > p {
  padding: 1em;
  margin-bottom: 0;
  background-color: white;
  text-align: right;
}

.chat p {
  border-radius: .5em .5em 0 0;
}

.chat footer {
  padding: .5em;
  margin-top: 0;
  border-bottom-right-radius: .5em;
  background-color: rgb(213, 213, 213);
}

.chat .your-message footer {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: .5em;
}

.chat footer > p {
  display: inline;
  font-size: .75em;
}

.chat li:nth-of-type(2) > p {
  background-color: #3498db;
  color: white;
  text-align: left;
}

.chat label {
  margin-bottom: .5em;
  color: white;
  font-size: .9em;
}

.chat textarea {
  height: 2.5em;
  padding: .5em;
  border: .3em solid transparent;
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
  outline: none;
  resize: none;
}

[data-status="DELIVERED"],
[data-status="READ"] {
  float: right;
  margin-top: .3em;
}

/* Rating
---------------------------------------------------- */
.rating {
  width: 80%;
  margin: 5em auto;
}

.rating > div {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  min-height: 7em;
  max-width: 100%;
  padding: 1em;
  padding-top: .5em;
  background-color: #34495e;
}

.rating svg {
  margin-top: 1em;
}

.rating svg:hover {
  height: 4em;
  max-width: 4em;
}

.rated:focus + svg {
  height: 4em;
}

.rating legend {
  width: 100%;
  padding: .6em 0;
  background-color: #FF5851;
  color: white;
  font-size: 1.25em;
  text-align: center;
}

.rating legend:before {
  margin-left: .6em;
  content: '';
}

.rating label {
  padding-top: .75em;
}

#rating-0 + label::before {
  background: url('../images/angry.svg') 0px center no-repeat;
}

#rating-1 + label::before {
  background: url('../images/meh.svg') 0px center no-repeat;
}

#rating-2 + label::before {
  background: url('../images/nice.svg') 0px center no-repeat;
}

#rating-3 + label::before {
  background: url('../images/fantastical.svg') 0px center no-repeat;
}

@media screen and (max-width: 40em) {
  .rating {
    width: 97.5%;
  }
}

/* Media subtitle
---------------------------------------------------- */
.media-subtitle {
  margin: 0 auto;
  max-width: 30em;
  padding: .75em;
  background-color: #ecf0f1;
  color: #666;
}

.media-subtitle img {
  max-width: 100%;
}

.media-subtitle h1 {
  margin-left: 2em;
}

.media-subtitle a {
  float: right;
  color: #3498db;
}

@media screen and (max-width: 24.6em) {
  .media-subtitle {
    padding: .5em;
    max-width: 100%;
  }
}

/* Ampersand
---------------------------------------------------- */
.amp {

}

/* Footer
---------------------------------------------------- */
footer.main {
  padding: 1.5em;
  margin-top: 2em;
  background-color: #1D2225;
  color: white;
  text-align: center;
}

